[tool.poetry]
name = "be-test-1"
version = "0.1.0"
description = ""
authors = ["Linus T"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
strawberry-graphql = {extras = ["debug-server"], version = "^0.209.7"}
invoke = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
